--- a/homepage/templates/footer.html
+++ b/homepage/templates/footer.html
@@ -1,56 +1,71 @@
-<footer style="padding:20px;background-color:#080738;color:white;">
-  <div style="padding-left:10%;padding-right:10%">
-    <div class="row" style="margin-bottom:20px;">
-        <div class="col-md-3 col-sm-6">
-          <h1><i class="fa fa-contao " aria-hidden="true"></i>IOC</h1>
-        </div>
-        <div class="col-md-3 col-sm-6 footer">
-          <ul class="list-unstyled">
-            <h4 class="text-muted">Services</h4>
-            <li><a href="/impliment">EpsilonAI Implimentation</a></li>
-            <!-- <li><a href="#">Automation Anywhere Implimentation</a></li> -->
-            <li><a href="/remote">Remote technical assistance</a></li>
-            <!-- <li><a href="#">Custom ML models</a></li> -->
-            <li><a href="/training">EpsilonAI Training</a></li>
-          </ul>
-        </div>
-        <div class="col-md-3 col-sm-6 footer">
-          <ul class="list-unstyled">
-            <h4 class="text-muted">Solutions</h4>
-            <li><a href="/industry">By Industry</a></li>
-            <li><a href="#">By Technology</a></li>
-            <!-- <li><a href="#">Webinars</a></li> -->
-            <li><a href="/blogs">Blogs</a></li>
-          </ul>
-        </div>
-        <div class="col-md-3 col-sm-6 footer">
-          <ul class="list-unstyled">
-            <h4 class="text-muted"> About US</h4>
-            <li><a href="/about">About US</a></li>
-            <!-- <li><a href="#">Investors</a></li> -->
-            <li><a href="/career">Careers</a></li>
-            <li><a href="/contact_us">Contact US</a></li>
-          </ul>
-        </div>
-    </div>
+<footer>
+  <div class="container-fluid no_padding" style="min-height:40vh;margin:20px auto;position:relative;">
+    <img src="/static/images/24tut/7.png" class="bg on_left" width="10%">
+    <img src="/static/images/24tut/6.png" class="bg on_right" width="10%">
 
-    <div class="row" style="border-top:1px solid grey;">
-      <div class="col-md-12" style="margin:5px;">
-        <ul class="list-inline terms">
-          <li style="border-right:0px">© 2018 CIOC. All Rights Reserved.</li>
-          <li>Terms of Service </li>
-          <li>Trademark Policy </li>
-          <li>Privacy Policy </li>
-          <li>Security </li>
-          <li style="border-right:0px">Compliance </li>
-          <ul class="list-inline social pull-right">
-            <li><a href=""></a><i class="fa fa-facebook-official fa-2x" aria-hidden="true"></i></li>
-            <li><a href=""></a><i class="fa fa-twitter-square fa-2x" aria-hidden="true"></i></li>
-            <li><a href=""></a><i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i></li>
-            <li><a href=""></a><i class="fa fa-github-square fa-2x" aria-hidden="true"></i></li>
-          </ul>
-        </ul>
+    <div class="col-md-6 col-md-offset-3 text-center" style="margin-top:7%;">
+      <h1 class="heading_big">Start a Journey. Enroll Now</h1>
+      <h5 class="heading_small">Learn SOMETHING WHEREEVER YOU ARE</h5>
+      <div style="margin-left:40%;">
+        <button type="button" class=" btn_gradient">Join a Course Now</button>
       </div>
     </div>
   </div>
+  <div class="container-fluid no_padding" style="min-height:20vh;margin:20px auto;">
+    <div class="col-md-12 no_padding">
+      <div class="col-md-6 text-center" style="background-color:#02EBA3;color:#fff;min-height:13vh;padding-top:40px;">
+        <span style="color: #fff;font-size: 1.4em;font-weight:bold;">Get hands on the <a href="#" class="linkline">Great Courses</a> you like </span><br>
+      </div>
+      <div class="col-md-6 text-center" style="background-color:#02EBA3;color:#fff;min-height:13vh;padding-top:40px;">
+        <div class="container-fluid no_padding" style="width:50%">
+          <span style="color: #fff;font-size: 1.4em;font-weight:bold;padding-right:20px;">Follow us on</span>
+          <i aria-hidden="true" class="social_links fa fa-facebook "></i>
+          <i aria-hidden="true" class="social_links fa fa-twitter"></i>
+          <i aria-hidden="true" class="social_links fa fa-google-plus "></i>
+          <i aria-hidden="true" class="social_links fa fa-instagram"></i>
+          <i aria-hidden="true" class="social_links fa fa-vimeo "></i>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div style="padding-left:10%;padding-right:10%">
+    <div class="col-md-8 col-md-offset-2" style="margin-bottom:20px;border-bottom:1px solid #ddd;padding-bottom:35px;">
+      <div class="col-md-4 col-sm-6 footer">
+        <ul class="folist">
+          <h4 class="text-muted">Links</h4>
+          <li><a href="/impliment">Courses</a></li>
+          <li><a href="/remote">Tutors</a></li>
+          <li><a href="/training">Quiz & Tests </a></li>
+        </ul>
+      </div>
+      <div class="col-md-4 col-sm-6 footer">
+        <ul class="folist">
+          <h4 class="text-muted">Company</h4>
+          <li><a href="/about">About US</a></li>
+          <li><a href="/career">Talk To Us</a></li>
+          <li><a href="/contact_us">Help</a></li>
+
+        </ul>
+      </div>
+      <div class="col-md-4 col-sm-6 footer">
+        <ul class="contact">
+          <h4 class="text-muted"> Contact US</h4>
+          <li><i class="fa fa-map-marker text-muted" aria-hidden="true"></i> <span> <b> Address:</b> </span> <span class="text-muted"> Bangalore,KA,India</span> </li>
+          <li> <i class="fa fa-phone text-muted" aria-hidden="true"></i><span> <b> Phone:</b> </span> <span class="text-muted"> +9182373488</span> </li>
+          <li><i class="fa fa-envelope text-muted" aria-hidden="true"></i> <span> <b> Email:</b> </span> <span class="text-muted"> info@24tutors.in</span> </li>
+        </ul>
+      </div>
+    </div>
+    <div class="container-fluid min_padd">
+      <div class="col-md-12">
+        <div class="col-md-4 col-md-offset-1">
+          <h5 class="text-muted">Copyright 2018.All Righst Reserved</h5>
+        </div>
+        <div class="col-md-4 col-md-offset-2">
+        <span class="text-muted"style="padding-right:20px;">Privacy Policy</span>
+        <span class="text-muted"style="border-right:1px solid #aaa;border-left:1px solid #aaa;padding-right:20px;padding-left:20px;"> Terms and Conditions</span>
+        <span class="text-muted"style="padding-left:20px;"> Refund Policy</span>
+        </div>
+      </div>
+    </div>
 </footer>
