--- a/homepage/templates/header.html
+++ b/homepage/templates/header.html
@@ -5,7 +5,7 @@
     <!-- Brand and toggle get grouped for better mobile display -->
     {% verbatim %}
     <div class="navbar-header">
-      <a class="navbar-brand" href="/" style="padding:0px;"> <img src="/static/images/eai_logo.png" alt="" style="height:100%;"> </a>
+      <a class="navbar-brand" href="/" style="padding:0px;"> <img src="/static/images/24_tutors_icon.svg" alt="" style="height:100%;"> </a>
       <!-- <button type="button" class="btn btn-warning hidden-lg hidden-md" style="background-color:#ff6900;margin-top:10px;" ng-click="schedule()">
         Request a Demo
       </button> -->
