--- a/homepage/templates/header.html
+++ b/homepage/templates/header.html
@@ -1,11 +1,11 @@
 {% load i18n %}
 
-<nav class="navbar navbar-default navbar-fixed-top" style="box-shadow: rgba(8, 19, 31, 0.5) 0px 3px 10px 0px;background-color:white;">
+<nav class="navbar navbar-default navbar-fixed-top" style="background-color:#0e0e0e;">
   <div class="container">
     <!-- Brand and toggle get grouped for better mobile display -->
     {% verbatim %}
     <div class="navbar-header">
-      <a class="navbar-brand" href="/" style="padding:0px;"> <img src="/static/images/24_tutors_icon.svg" alt="" style="height:100%;"> </a>
+      <a class="navbar-brand" href="/" style="padding:0px;"> <img src="/static/images/24tut/icon_invrt.svg" alt="" style="height:100%;"> </a>
       <!-- <button type="button" class="btn btn-warning hidden-lg hidden-md" style="background-color:#ff6900;margin-top:10px;" ng-click="schedule()">
         Request a Demo
       </button> -->
