--- a/static_shared/css/custom/base.css
+++ b/static_shared/css/custom/base.css
@@ -25,7 +25,7 @@ html {
 }
 
 body {
-    font-family: "Noto Sans", Tahoma, sans-serif;
+    font-family:"Open Sans", "Noto Sans", Tahoma, sans-serif;
     font-size: 0.8rem;
 }
 #myQATableHeader th{
@@ -43,11 +43,11 @@ body {
 cursor: pointer
 }
 #myQATable td{
-  border: 1px solid #dddddd;
+  border: 1px solid #f0f0f0;
   padding: 7px 5px;
 }
 #myQATable tr:nth-child(even){
-  background-color: #dddddd;
+  background-color: #f0f0f0;
 }
 /* @media only screen and (max-width:600px) {
   html {
