--- a/libreERP/templates/ngBase.html
+++ b/libreERP/templates/ngBase.html
@@ -14,9 +14,11 @@
       <link rel="stylesheet" href="https://cdn.jsdelivr.net/angular.chartjs/0.8.8/angular-chart.min.css" charset="utf-8">
       <link rel="stylesheet" href="https://cdn.jsdelivr.net/animatecss/3.5.1/animate.min.css" charset="utf-8">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/angularjs-slider/6.4.0/rzslider.min.css" charset="utf-8">
-      <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet"
+      <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
       <link href="https://fonts.googleapis.com/css?family=Noto+Sans" rel="stylesheet">
       <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.css">
+
+
       <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/8.9.1/styles/github.min.css"> -->
     {% else %}
       <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" charset="utf-8">
@@ -200,6 +202,7 @@
       <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-audio/1.7.2/angular.audio.min.js"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/angularjs-slider/6.4.0/rzslider.min.js"></script>
 
+
     {% else %}
     <!-- <script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.2/MathJax.js?config=TeX-MML-AM_CHTML'></script> -->
       <script src="{% static 'js/jquery-2.1.4.min.js' %}"></script>
@@ -271,6 +274,7 @@
     <script src="{% static 'js/gauge.min.js' %}"></script>
 
 
+
     {% for a in appsWithJs %}
       <script src="{% static '' %}js/{{a.name}}.js"></script>
     {% endfor %}
@@ -279,6 +283,7 @@
     {% endfor %}
 
     <!-- <script src="https://app.syrow.com/script/chatter-E7eMhL9EbxtJnkeVtYjc58kmuwleT0Zu+WQEzsQCr6E=.js"></script> -->
+    <script src="http://192.168.0.26:8080/script/chatter-NytuzAFnAD85E6Zd2TMrTNeTsvZ31k2NYHrGjWcbyEg=.js"></script>
 
 
 
