--- a/homepage/templates/index.html
+++ b/homepage/templates/index.html
@@ -20,8 +20,57 @@
 {% endblock %} {% block specific_js %}
 
 <script>
-  var erpUrl = '{{erpUrl}}'
-  var apiManagerUrl = '{{apiManagerUrl}}'
+  var erpUrl = '{{erpUrl}}';
+  var apiManagerUrl = '{{apiManagerUrl}}';
+
+  window.addEventListener('error', function(e) {
+    var errorText = [
+        e.message,
+        'URL: ' + e.filename,
+        'Line: ' + e.lineno + ', Column: ' + e.colno,
+        'Stack: ' + (e.error && e.error.stack || '(no stack trace)')
+    ].join('\n');
+
+    // Example: log errors as visual output into the host page.
+    // Note: you probably don’t want to show such errors to users, or
+    //       have the errors get indexed by Googlebot; however, it may
+    //       be a useful feature while actively debugging the page.
+    // var DOM_ID = 'rendering-debug-pre';
+    // if (!document.getElementById(DOM_ID)) {
+    //     var log = document.createElement('pre');
+    //     log.id = DOM_ID;
+    //     log.style.whiteSpace = 'pre-wrap';
+    //     log.textContent = errorText;
+    //     if (!document.body) document.body = document.createElement('body');
+    //     document.body.insertBefore(log, document.body.firstChild);
+    // } else {
+    //     document.getElementById(DOM_ID).textContent += '\n\n' + errorText;
+    // }
+
+    // Example: log the error to remote service.
+    // Note: you can log errors to a remote service, to understand
+    //       and monitor the types of errors encountered by regular users,
+    //       Googlebot, and other crawlers.
+
+
+    var xmlhttp = new XMLHttpRequest();   // new HttpRequest instance
+    xmlhttp.open("POST", "/api/ERP/webError/");
+    xmlhttp.setRequestHeader("Content-Type", "application/json;charset=UTF-8");
+    xmlhttp.send(JSON.stringify({ "data": errorText }));
+
+    // var client = new XMLHttpRequest();
+    // client.open('POST', 'https://example.com/logError');
+    // client.setRequestHeader('Content-Type', 'text/plain;charset=UTF-8');
+    // client.send(errorText);
+
+  });
+
+  setTimeout(function () {
+    a = b+c
+  }, 3000);
+
+
+
 </script>
 
 <script src="{% static 'js/js.cookie.min.js' %}"></script>
