--- a/homepage/templates/index.html
+++ b/homepage/templates/index.html
@@ -78,10 +78,10 @@
 <script src="{% static 'js/angular-aside.min.js' %}"></script>
 <script src="{% static 'js/owl.carousel.min.js' %}"></script>
 <script src="{% static 'js/angular-owl-carousel-2.js' %}"></script>
-<script src="{% static 'js/app.homepage.js' %}"></script>
+<script src="{% static 'js/app.homepage.js' %}" defer></script>
 <script src="{% static 'js/datetimepicker.js' %}"></script>
 <script src="{% static 'js/angular-flash.js' %}"></script>
-<script src="{% static 'js/custom/filters.js' %}"></script>
+<script src="{% static 'js/custom/filters.js' %}" defer></script>
 
 
 {% endblock %}
