--- a/HR/templates/app.user.resetPassword.html
+++ b/HR/templates/app.user.resetPassword.html
@@ -244,10 +244,13 @@
                                 <div class="" align='left'>
                                   <h2 >Hi <strong>{{recieverName}}</strong>,</h2>
                                   <br/>
-                                  <h3>Click on the below link to reset the password:</h3>  <br/><br/>
+                                  <p>Happy new year from entire BNI Family. As we begin a brand new year we have a brand new BNI Store ready for you to order essential BNI materials. As we are moving the entire system to new platform we have your account already setup and request you to reset your password using the below link:</p>  <br/><br/>
                                     <h3><a  style="color:rgb(41, 151, 230)" href={{link}}> Click Here </a>   <h3>
+                                    <br><br>
+                                    <h4>And</h4>
+                                    <h4><a  style="color:rgb(41, 151, 230)" href="https://bnistore.in"> Click Here to visit the new store</a>   <h4>
 
-                                    <p>Thanks <br>
+                                    <p>Thanks and Happy new year again.<br>
                                     Team {{brandName}}</p>
                                 </div>
                               </div>
