--- a/homepage/templates/header.html
+++ b/homepage/templates/header.html
@@ -1,14 +1,12 @@
 {% load i18n %}
 
-<nav class="navbar navbar-default navbar-fixed-top" style="background-color:#0e0e0e;">
+<nav class="navbar navbar-default navbar-fixed-top" style="background-color:#0e0e0e;border:0px solid black;padding-top:7px;min-height:65px;">
   <div class="container">
     <!-- Brand and toggle get grouped for better mobile display -->
     {% verbatim %}
     <div class="navbar-header">
-      <a class="navbar-brand" href="/" style="padding:0px;"> <img src="/static/images/24tut/icon_invrt.svg" alt="" style="height:100%;"> </a>
-      <!-- <button type="button" class="btn btn-warning hidden-lg hidden-md" style="background-color:#ff6900;margin-top:10px;" ng-click="schedule()">
-        Request a Demo
-      </button> -->
+      <a class="navbar-brand" href="/" style="padding:0px;"> <img src="/static/images/24tut/icon_grad.svg" alt="" style="height:100%;"> </a>
+
       <div class="navbar-toggle toggleBtn" data-toggle="collapse" data-target="#myNavbar" ng-click="toggleNavbar = !toggleNavbar" style="border:none;">
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
@@ -18,82 +16,49 @@
     <div class="collapse navbar-collapse" id="myNavbar" uib-collapse="!toggleNavbar">
 
       <ul class="nav navbar-nav header_nav {{device.smallDevice?'pull-left':'pull-right'}}">
-        {% endverbatim %}
+
         <li class="header_element">
-          <a href="" ng-mouseleave="show[0]=false" ng-mouseover="show[0]=true"> 24 tutuors</a>
+          <a href="" ng-mouseleave="show[0]=false" ng-mouseover="show[0]=true" class="nav_ele"> Courses</a>
           <ul ng-mouseleave="keepshow[0]=false" ng-click="keepshow[0] = false; toggleNavbar = false;" ng-mouseover="keepshow[0]=true" ng-show="show[0]||keepshow[0]" class="container_box">
-            <!-- <li><a href="/rpa">{% trans 'whatisrpa' %}</a></li> -->
-            <li><a href="/home">Homepage</a></li>
-            <li><a href="/enroll">Enroll</a></li>
-            <li><a href="/about">About</a></li>
+            <li><a href="">class 12th</a></li>
+            <li><a href="">class 11th</a></li>
+            <li><a href="">class 10th</a></li>
+            <li><a href="">class 9th</a></li>
+            <li><a href="">class 8th</a></li>
+            <li><a href="">class 7th</a></li>
+            <li><a href="">class 6th</a></li>
+            <li><a href="">class 13th (Droppers)</a></li>
           </ul>
         </li>
-        <!-- <li class="header_element">
-          <a href="" ng-mouseleave="show[1]=false" ng-mouseover="show[1]=true"> Services</a>
-          <ul ng-mouseleave="keepshow[1]=false" ng-click="keepshow[1] = false; toggleNavbar = false;" ng-mouseover="keepshow[1]=true" ng-show="show[1]||keepshow[1]" class="container_box" style="width:300px;">
-            <li><a href="/impliment">UIPath Implimentation</a></li>
-            <li><a href="/remote">Remote technical assistance</a></li>
-            <li><a href="/training">EpsilonAI Training</a></li>
-          </ul>
-        </li> -->
-        <!-- <li class="header_element">
-          <a href="" ng-mouseleave="show[2]=false" ng-mouseover="show[2]=true"> Solutions </a>
+        <li class="header_element">
+          <a href="" ng-mouseleave="show[2]=false" ng-mouseover="show[2]=true" class="nav_ele"> Study Material</a>
           <ul ng-mouseleave="keepshow[2]=false" ng-click="keepshow[2] = false; toggleNavbar = false;" ng-mouseover="keepshow[2]=true" ng-show="show[2]||keepshow[2]" class="container_box">
-            <li><a href="/bpo">For BPO</a></li>
-            <li><a href="/finance">For Finance & Banking</a></li>
-            <li><a href="/chatbot">Chatbot</a></li>
-            <li><a href="/pdf_process">PDF Processing</a></li>
-            <li><a href="/nlp">NLP</a></li>
-            <li><a href="/excel_automation">Excel Automation</a></li>
-
+            <li><a href="">NCERT Solutions</a></li>
+            <li><a href="">Previous Year Papers</a></li>
+            <li><a href="">Mock Tests</a></li>
+            <li><a href="">Sample Papers</a></li>
+            <li><a href="">Reference Book Solutions</a></li>
+            <li><a href="">ICSE Solutions</a></li>
+            <li><a href="">School Syllabus</a></li>
+            <li><a href="">Revision Notes</a></li>
+            <li><a href="">Important Questions</a></li>
+            <li><a href="">Math Formula Sheets</a></li>
           </ul>
-        </li> -->
-        <!-- <li class="header_element">
-          <a href="" ng-mouseleave="show[3]=false" ng-mouseover="show[3]=true"> Company</a>
+        </li>
+        <li class="header_element">
+          <a href="" ng-mouseleave="show[1]=false" ng-mouseover="show[1]=true" class="nav_ele"> Blogs</a>
+        </li>
+        <li class="header_element">
+          <a href="" ng-mouseleave="show[3]=false" ng-mouseover="show[3]=true" style="color:#fff;">About Us</a>
           <ul ng-mouseleave="keepshow[3]=false" ng-click="keepshow[3] = false; toggleNavbar = false;" ng-mouseover="keepshow[3]=true" ng-show="show[3]||keepshow[3]" class="container_box">
-            <li><a href="/about">About US</a></li>
-            <li><a href="/career">Careers</a></li>
-            <li><a href="/contact_us">Contact US</a></li>
+            <li><a href="/enroll">Enroll</a></li>
+            <li><a href="/about">About 24Tutors</a></li>
+            <li><a href="/about">Our Testimonials</a></li>
+            <li><a href="/about">Contact Us</a></li>
           </ul>
-        </li>
-        <li class="header_element" ng-click="toggleNavbar = false">
-          <a href="/pricing"> Pricing</a>
-        </li>
-        <li class="header_element" ng-click="toggleNavbar = false">
-          <a href="/blogs"> Blogs</a>
-        </li> -->
-
-        {% verbatim %}
-        <!-- <li style="margin-left:30px; {{device.smallDevice ? 'display:inline-block;': ''}}">
-          <button type="button" class="btn btn-warning" style="background-color:#ff6900;margin-top:10px;" ng-click="schedule()">
-            Schedule a Demo
-          </button>
-        </li>
-        <li style="margin-left:20px;width:70px; {{device.smallDevice ? 'display:inline-block;': ''}}">
-          <div class="dropdown" style="margin-top:10px;">
-            <button class="btn btn-default dropdown-toggle " type="button" data-toggle="dropdown"> <img ng-src="{{data.currentLang.flag}}" style="height:15px;" alt=""> {{data.currentLang.lang}}
-              <span class="caret"></span>
-            </button>
-            <ul class="dropdown-menu">
-              <li class="selectLang"><a href="" ng-repeat="l in langOptions" ng-click="changeLan(l)" ng-if="data.currentLang != l"><img ng-src="{{l.flag}}" style="height:15px;" alt=""> {{l.lang}}</a></li>
-            </ul>
-          </div>
         </li>
       </ul>
     </div>
   </div>
-  <div class="row" style="position:relative;" ng-show="show_cokie_agree">
-    <div class="col-md-12 cookie_agremt">
-      <div class="col-md-10">
-        <span>This website uses cookie.
-           This <a href="/policy">policy</a> will inform you how the cookies are placed, used on this
-            website and how you can manage them.</span>
-      </div>
-      <div class=" col-md-2 common_padding">
-        <button type="button" class="btn decline_btn" ng-click="cookie(0)"style="">Decline</button>
-        <button type="button" class="btn accept_btn" ng-click="cookie(0)"style="">Accept</button>
-      </div>
-    </div>
-  </div> -->
   {% endverbatim %}
 </nav>
