--- a/homepage/static/css/homepage.css
+++ b/homepage/static/css/homepage.css
@@ -2495,7 +2495,7 @@
 .header_nav>li>a {
   font-weight: 501;
   margin-left: 20px;
-  color:#fff;
+  color: #fff;
 }
 
 .noPadding {
@@ -3597,8 +3597,9 @@ figure {
   right: 0;
   z-index: -1;
 }
-.topmargin{
-  margin-top:10em;
+
+.topmargin {
+  margin-top: 10em;
 }
 
 .custom-btn {
@@ -3648,12 +3649,12 @@ figure {
   transition: 0.3s;
   width: 90%;
   border-radius: 5px;
-  min-height:41vh;
+  min-height: 41vh;
 }
 
 .cards:hover {
   box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
-  cursor:pointer;
+  cursor: pointer;
 }
 
 .img-radius {
@@ -3687,7 +3688,7 @@ figure {
   background-size: cover;
   box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
   border-radius: 25px;
-  cursor:pointer;
+  cursor: pointer;
 }
 
 .courses ul li {
@@ -3731,7 +3732,8 @@ figure {
 .hover-circle:hover .overlay {
   opacity: 1;
 }
-.btn-style1{
+
+.btn-style1 {
   margin-top: 2em;
   margin-bottom: 1em;
   /* display: block; */
@@ -3753,6 +3755,7 @@ figure {
   moz-transition: all .4s ease-in-out;
   -webkit-transition: all .9s ease-in-out;
 }
+
 .btn-style1:hover {
   background-image: linear-gradient(to right, #873be7, #6A7EF1, #02EBA3);
   transition: all .200s ease-in-out;
@@ -3760,19 +3763,31 @@ figure {
   moz-transition: all .4s ease-in-out;
   -webkit-transition: all .9s ease-in-out;
 }
-.owl-item.active.center  {
+
+.owl-item.active.center {
   transform: scale(1.1);
 }
-.rightcls{
-  text-align:right;
+
+.rightcls {
+  text-align: right;
 }
+
 .flex-container {
   display: flex;
   flex-direction: column;
-
 }
-.flex-item{
-    margin-top:1em;
+
+.container-align {
+  text-align: right;
+}
+
+.flex-item {
+  margin-top: 1em;
+}
+
+.alignment {
+  float: right;
+  margin-left: 1em;
 }
 
 /* ------------------ */
@@ -3781,11 +3796,12 @@ figure {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     transition: 0.3s;
     text-align: center;
-    margin-left:15px;
-    width:90%;
+    margin-left: 15px;
+    width: 90%;
     border-radius: 5px;
-    min-height:41vh;
+    min-height: 41vh;
   }
+
   .likecard {
     background-color: #FAFAFA;
     min-height: 10vh;
@@ -3793,6 +3809,7 @@ figure {
     margin-bottom: 2em;
     padding-bottom: 1em;
   }
+
   .top {
     position: relative;
     min-height: 80vh;
@@ -3814,30 +3831,47 @@ figure {
     position: absolute;
     display: block;
     border-bottom: 2px solid #00EDA3;
-
   }
-  .top h2{
+
+  .top h2 {
     font-size: 20px;
   }
-  .topmargin{
-    margin-top:6em;
+
+  .topmargin {
+    margin-top: 6em;
     text-align: left;
   }
-  .dropdown , .leftalign{
+
+  .dropdown, .leftalign {
     text-align: left;
   }
-  .top::before{
-    height:80vh;
+
+  .top::before {
+    height: 80vh;
   }
+
   .dropdown-menu {
     left: 0;
-
-  }
-  .size h4{
-    font-size:15px;
-  }
-  .rightcls{
-    text-align:center;
   }
 
+  .size h4 {
+    font-size: 15px;
+  }
+
+  .rightcls {
+    text-align: center;
+  }
+
+  .imghide {
+    display: none;
+  }
+
+  .container-align {
+    text-align: left;
+  }
+
+  .alignment {
+    float: left;
+    margin-left:0;
+  }
 }
